<resources>
    <string name="app_name">ReserveMe</string>
    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_sign_in_short">Se connecter</string>
    <string name="welcome">"Bienvenue !"</string>
    <string name="invalid_username">Login invalide</string>
    <string name="invalid_password">Le mot de passe doit comporter au moins 6 caractères</string>
    <string name="login_failed">"Authentification invalide !"</string>
    <string name="logo_reserveme">Logo ReserveMe</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="url_base">"http://localhost:8080"</string>
    <string name="action_search">Search</string>
    <string name="prompt_search">Do search</string>
    <string name="booking_location">Localisation</string>
    <string name="booking_start_at">Start</string>
    <string name="booking_end_at">End</string>
    <string name="booking_booked_at">Booking date</string>
    <string name="booking_participant_nbr">Participant number</string>
    <string name="booking_booking_title">Booking :</string>
    <string name="booking_participation_nbr_title">Participant number :</string>
    <string name="booking_booked_at_title">Booked at :</string>
    <string name="booking_end_at_title">Started at :</string>
    <string name="booking_start_at_title">Ended at :</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="object_name">Object name</string>
    <string name="quantity">Quantity</string>
    <string name="location_booking_dialog_title">List of bookings</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="no_location_bookings">No location bookings</string>
    <string name="eyes_icon_to_navigate">Eyes icon to navigate</string>
    <string name="list_of_bookings">List of bookings</string>
    <string name="see_all_bookings_of_this_location">See all bookings of this location</string>
    <string name="delete_booking">Delete booking</string>
    <string name="add_new_booking">Add new booking</string>
    <string name="available_now">Available now</string>
    <string name="not_available_now">Not available now</string>
    <string name="open_date_picker">Open date picker</string>
    <string name="add_booking">Add booking</string>
    <string name="participants">Participants</string>
    <string name="selected_person">Selected person :</string>
    <string name="_0">0</string>
    <string name="see_bookings">See bookings</string>
    <string name="arrow_to_expand">Arrow to expand</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="midnight">00:0</string>
    <string name="number_limit">Number limit</string>
    <string name="available">Available ?</string>
    <string name="remove_date_to_search">Remove date to search</string>
    <string name="name">Name</string>
    <string name="remove_name_search">Remove name search</string>
    <string name="no_result_found">No result found</string>
    <string name="end_date_available">End date available</string>
    <string name="start_date_available">Start date available</string>
</resources>