<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/booking_row_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <TextView
            android:text="@string/booking_booking_title"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginEnd="1pt"
            android:gravity="start"/>
        <TextView
            android:id="@+id/locationBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="5pt"
            android:gravity="start"/>
        <TextView
            android:text="@string/booking_participation_nbr_title"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginEnd="1pt"
            android:gravity="start"/>
        <TextView
            android:id="@+id/participantNbrBox"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="start"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/booking_start_at_title"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginEnd="1pt"
            android:gravity="start"/>
        <TextView
            android:id="@+id/startAtBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/booking_end_at_title"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginEnd="1pt"
            android:gravity="start"/>
        <TextView
            android:id="@+id/endAtBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/booking_booked_at_title"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:layout_marginEnd="1pt"
            android:gravity="start"/>
        <TextView
            android:id="@+id/bookAtBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>
    </LinearLayout>

</LinearLayout >