<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".activities.HomeActivity">

    <EditText
        android:id="@+id/searchBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="@string/prompt_search"
        android:hint="@string/prompt_search"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:selectAllOnFocus="true"
        android:fontFamily="@font/museo_regular"
        app:layout_constraintTop_toTopOf="@id/container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/searchButton"
        android:inputType="text" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:enabled="false"
        android:fontFamily="@font/museo_bold"
        android:text="@string/action_search"
        app:layout_constraintTop_toBottomOf="@id/searchBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bookingListView"
        android:onClick="navigateToSearch"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bookingListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/booking_row_layout"
        android:fontFamily="@font/museo_regular"
        app:layout_constraintTop_toBottomOf="@id/searchButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</LinearLayout>