<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerTitleDialogLocationBooking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/activity_horizontal_margin_divide"
        android:paddingEnd="@dimen/activity_horizontal_margin_divide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/parentHeaderLocationBookingDialogFragment">

        <TextView
            android:id="@+id/titleDialogLocationBooking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin_divide"
            android:fontFamily="@font/museo_regular"
            android:textSize="@dimen/subheader"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/addBooking"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/addBooking"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/rounded_corner_add"
            android:contentDescription="@string/add_new_booking"
            android:padding="@dimen/activity_vertical_margin_divide"
            android:src="@drawable/ic_add_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parentHeaderLocationBookingDialogFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/activity_horizontal_margin_divide"
        android:paddingEnd="@dimen/activity_horizontal_margin_divide"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintBottom_toTopOf="@id/locationBookingsDialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerTitleDialogLocationBooking">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/first_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/second_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent=".40" />


        <TextView
            android:id="@+id/locationHeaderStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/museo_bold"
            android:text="@string/start_date"
            android:textSize="@dimen/normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/first_guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/locationHeaderEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/museo_bold"
            android:text="@string/end_date"
            android:textSize="@dimen/normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/second_guideline"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/locationBookingsDialog"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="@dimen/activity_vertical_margin_divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/parentHeaderLocationBookingDialogFragment"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/emptyLocationBooking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/headerTitleDialogLocationBooking"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/museo_regular"
        android:textSize="@dimen/normal"
        android:paddingStart="@dimen/activity_horizontal_margin_divide"
        android:paddingEnd="@dimen/activity_horizontal_margin_divide"
        android:text="@string/no_location_bookings"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>